overflow fix

--- a/css/main.scss
+++ b/css/main.scss
@@ -11,7 +11,7 @@ img { /*!margin-bottom: 24px;
 
 body {
 	padding-top: 70px;
-  overflow-x: hidden;
+
 }
 
 figcaption {
@@ -42,9 +42,9 @@ firstp {
 }
 
 .container-fluid {
-  margin-right:auto;
-  margin-left:auto;
-  max-width:1000px;
+  margin-right: auto;
+  margin-left: auto;
+  max-width: 1000px; /* or 950px */
    /* or 950px */
 }
 
@@ -86,13 +86,11 @@ firstp {
 /* Carusel */
 
 .carousel {
-  border-radius: 3px 3px 3px 3px;
- margin-bottom: 20px;
- // margin-top: 20px;
- // margin-left: 30px;
- // margin-right: 30px;
-
-
+    border-radius: 3px 3px 3px 3px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    margin-left: 30px;
+    margin-right: 30px;
 }
 
 #header     { position: relative;margin-top:30px}
@@ -103,6 +101,7 @@ firstp {
     background: #f5f5f5 none repeat scroll 0 0;
     height: 150px;
     padding: 60px 0;
+    overflow-x:hidden;
 }
 
 .footer_carosal .footer_carosal_icon .item img {
@@ -111,7 +110,8 @@ firstp {
 
 .footer {
     background: #2e2e2e;
-    padding-top: 5px
+    padding-top: 5px;
+    overflow-x:hidden;
 }
 
 .footer .footer-charity-text {
